{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 407,
  "lineage": "3b10d242-0508-c344-c28b-e9d45f094382",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:001397307799:loadbalancer/app/devops-lb-tf/809f654b4db99927",
            "arn_suffix": "app/devops-lb-tf/809f654b4db99927",
            "dns_name": "devops-lb-tf-1829230247.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:001397307799:loadbalancer/app/devops-lb-tf/809f654b4db99927",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "devops-lb-tf",
            "security_groups": [
              "sg-04f79b77181fa4c12"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-057afb01b9f1b1909"
              },
              {
                "subnet_id": "subnet-06596a367824ec966"
              },
              {
                "subnet_id": "subnet-0bf94ab32fc9e8bf5"
              }
            ],
            "subnets": [
              "subnet-057afb01b9f1b1909",
              "subnet-06596a367824ec966",
              "subnet-0bf94ab32fc9e8bf5"
            ],
            "vpc_id": "vpc-07ee057069a387411",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_security_group.load_balancer_security_group",
            "aws_subnet.devops_subnet_a",
            "aws_subnet.devops_subnet_b",
            "aws_subnet.devops_subnet_c",
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:001397307799:listener/app/devops-lb-tf/809f654b4db99927/0fdd8ef51b457731",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:001397307799:targetgroup/target-group/7ca9d252e4ccd4a0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:001397307799:listener/app/devops-lb-tf/809f654b4db99927/0fdd8ef51b457731",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:001397307799:loadbalancer/app/devops-lb-tf/809f654b4db99927",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.application_load_balancer",
            "aws_alb_target_group.target_group",
            "aws_internet_gateway.igw",
            "aws_security_group.load_balancer_security_group",
            "aws_subnet.devops_subnet_a",
            "aws_subnet.devops_subnet_b",
            "aws_subnet.devops_subnet_c",
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:001397307799:targetgroup/target-group/7ca9d252e4ccd4a0",
            "arn_suffix": "targetgroup/target-group/7ca9d252e4ccd4a0",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200,301,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:001397307799:targetgroup/target-group/7ca9d252e4ccd4a0",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "target-group",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-07ee057069a387411"
          },
          "dependencies": [
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:001397307799:internet-gateway/igw-0004c2a79e83d9043",
            "id": "igw-0004c2a79e83d9043",
            "owner_id": "001397307799",
            "tags": {
              "Name": "igw"
            },
            "vpc_id": "vpc-07ee057069a387411"
          },
          "dependencies": [
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:001397307799:security-group/sg-04f79b77181fa4c12",
            "description": "allow incoming HTTP traffic only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04f79b77181fa4c12",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "devops-alb-sg",
            "name_prefix": "",
            "owner_id": "001397307799",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ee057069a387411"
          },
          "dependencies": [
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:001397307799:security-group/sg-01958a87e8fb02de9",
            "description": "Allows inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01958a87e8fb02de9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-04f79b77181fa4c12"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ecs_security_group",
            "name_prefix": "",
            "owner_id": "001397307799",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-07ee057069a387411"
          },
          "dependencies": [
            "aws_security_group.load_balancer_security_group",
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devops_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:001397307799:subnet/subnet-06596a367824ec966",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-06596a367824ec966",
            "map_public_ip_on_launch": true,
            "owner_id": "001397307799",
            "tags": {
              "Name": "subnet-devops-a"
            },
            "vpc_id": "vpc-07ee057069a387411"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devops_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:001397307799:subnet/subnet-0bf94ab32fc9e8bf5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0bf94ab32fc9e8bf5",
            "map_public_ip_on_launch": true,
            "owner_id": "001397307799",
            "tags": {
              "Name": "subnet-devops-b"
            },
            "vpc_id": "vpc-07ee057069a387411"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devops_subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:001397307799:subnet/subnet-057afb01b9f1b1909",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-057afb01b9f1b1909",
            "map_public_ip_on_launch": true,
            "owner_id": "001397307799",
            "tags": {
              "Name": "subnet-devops-c"
            },
            "vpc_id": "vpc-07ee057069a387411"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devops_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:001397307799:vpc/vpc-07ee057069a387411",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06a540b856a975c5c",
            "default_route_table_id": "rtb-0ab578b2830920556",
            "default_security_group_id": "sg-0415b1e0a82c03b40",
            "dhcp_options_id": "dopt-f79d289d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07ee057069a387411",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ab578b2830920556",
            "owner_id": "001397307799",
            "tags": {
              "Name": "devops-vpc-nextjs-app"
            }
          }
        }
      ]
    }
  ]
}